--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -2,10 +2,12 @@
   display: flex;
   gap: 10px;
   align-items: center;
+  justify-content: space-around;
+  width: 100%;
 }
 
-.Item .label {
-  flex: 1;
+.label .Item {
+  flex: 0;
 }
 
 .Item .qty {
